--- a/dayliy/问题描述.md
+++ b/dayliy/问题描述.md
@@ -36,7 +36,7 @@ def reverse_loop(head):
     return pre  			# 返回头指针，头指针就是迭代到最后一次时的head变量（赋值给了pre）
 ``````
 
-2.递归法
+#### 2.递归法
 
 ``````python
 def reverse_recursion(head):
