积累的更新

--- a/dayliy/时序性数据库在物联网中的应用.md
+++ b/dayliy/时序性数据库在物联网中的应用.md
@@ -21,5 +21,5 @@
 
 在此背景下，一些Nosql数据库可能是解决当前问题的不错候选方案。在毫无头绪的时候，我在V站上和大家讨论了这个问题，有很多非常有建设性的建议。在这里感谢V站的各位朋友。[链接放在这里](https://www.v2ex.com/t/538969#reply18)
 
-后面也和业内的其他朋友进行了讨论，大家给出的建议也是mongodb或者时序性数据库，最终我还是才用了时序性数据库，毕竟时序性数据库更加适合我的这种场景数据。
+后面也和业内的其他朋友进行了讨论，大家给出的建议也是mongodb或者时序性数据库，最终还是才用了时序性数据库，毕竟时序性数据库更加适合我的这种场景数据。
 
